# shadoks-PACE2024

./: CMakeLists.txt  LICENSE  README.md  compile.sh  instance.hpp  main.cpp  segtree.hpp  solpool.hpp  solution.hpp  solvers.hpp
solutions/: README.md  e001.sol  e002.sol  e003.sol  e004.sol  e005.sol  e006.sol  e007.sol  e008.sol  e009.sol  e010.sol  e011.sol  e012.sol  e013.sol  e014.sol  e015.sol  e016.sol  e017.sol  e018.sol  e019.sol  e020.sol  e021.sol  e022.sol  e023.sol  e024.sol  e025.sol  e026.sol  e027.sol  e028.sol  e029.sol  e030.sol  e031.sol  e032.sol  e033.sol  e034.sol  e035.sol  e036.sol  e037.sol  e038.sol  e039.sol  (+161 more)
